--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@tanstack/react-query": "^5.20.1",
     "expo": "~50.0.6",
+    "expo-constants": "~15.4.5",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "expo-router": "~3.4.7",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.5",
     "react-native-gesture-handler": "~2.14.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
