--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@shopify/flash-list": "1.6.3",
     "@tanstack/react-query": "^5.20.1",
     "expo": "~50.0.6",
     "expo-constants": "~15.4.5",
@@ -19,9 +20,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-mmkv": "^2.11.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@shopify/flash-list": "1.6.3"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
